# git-notes-memory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.claude/: hooks.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
commands/: capture.md  recall.md  search.md  status.md  sync.md
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md  research_proposal.md
docs/code-review/2025/12/24/: CODE_REVIEW.md  REMEDIATION_TASKS.md  REVIEW_SUMMARY.md
docs/spec/active/2025-12-18-memory-capture-plugin/: ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md
docs/spec/completed/2025-12-18-memory-capture-plugin/: CHANGELOG.md  README.md  REQUIREMENTS.md  RETROSPECTIVE.md
docs/spec/completed/2025-12-19-hook-based-memory-capture/: CHANGELOG.md  README.md  RETROSPECTIVE.md
hooks/: hooks.json  posttooluse.py  precompact.py  run-hook.sh  sessionstart.py  stop.py  userpromptsubmit.py
skills/memory-recall/: SKILL.md
skills/memory-recall/examples/: auto-recall.py  filtered-search.py
skills/memory-recall/references/: namespace-guide.md  search-optimization.md
src/git_notes_memory/: __init__.py  capture.py  config.py  embedding.py  git_ops.py  index.py  models.py  recall.py  sync.py
src/git_notes_memory/hooks/: session_analyzer.py  signal_detector.py
src/git_notes_memory/hooks/templates/: guidance_detailed.md  guidance_minimal.md  guidance_standard.md
src/git_notes_memory_manager/: __init__.py  main.py
tests/: conftest.py  test_capture.py  test_capture_decider.py  test_config.py  test_e2e_hooks.py  test_embedding.py  test_exceptions.py  test_git_ops.py  test_guidance_builder.py  test_hooks.py  test_index.py  test_init.py  test_lifecycle.py  test_main.py  test_models.py  test_note_parser.py  test_patterns.py  test_recall.py  test_search.py  test_signal_detector.py  test_sync.py  test_utils.py
